cmake_minimum_required(VERSION 3.14)
project(StrongestMapper)
set(CMAKE_CXX_STANDARD 14)
set(EIGEN_DIR "C:/Users/PC/Desktop/eigen")
if(NOT EXISTS ${EIGEN_DIR})
    message(FATAL_ERROR "Please check that the set Eigen directory is valid!")
endif()
include_directories(${EIGEN_DIR})

set(PYTHON_DIR "E:\\Program\ File\\anaconda3\\include")
if(NOT EXISTS ${PYTHON_DIR})
    message(FATAL_ERROR "Please check that the set Eigen directory is valid!")
endif()
include_directories(${PYTHON_DIR})
#include_directories(E:\\Program\ File\\anaconda3\\include)
link_libraries(E:/Program\ File/anaconda3/libs/python37.lib)

add_executable(StrongestMapper main.cpp src/parser/QASMparser.cpp src/parser/QASMparser.h src/parser/Environment.cpp src/parser/Environment.h src/queue/Queue.h src/filter/Filter.h src/queue/DefaultQueue.cpp src/queue/DefaultQueue.h src/slice/Slice.h src/slice/Slice.cpp src/connect/Connect.h src/connect/Connect.cpp)